# DispCtrl

./: .gitignore  CMakeLists.txt  DispCtrl.pro  DispCtrl_zh_CN.ts  README.md  config.json  config.toml  config_documentation.md  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
Basic/: ConfigManager.h  DispBasci.h  Protocol.cpp  Protocol.h  bindThread.h  log.cpp  log.h  mathUtil.h
Controller/: CentralDataManager.h  DataFlowManager.h  ErrorHandler.cpp  ErrorHandler.h  EventBus.h  PerformanceMonitor.h  RadarDataManager.cpp  RadarDataManager.h  ServiceContainer.h  controller.cpp  controller.h  data2dispmanager.cpp  data2dispmanager.h  disp2datamanager.cpp  disp2datamanager.h  disp2monmanager.cpp  disp2monmanager.h  disp2photomanager.cpp  disp2photomanager.h  disp2resmanager.cpp  disp2resmanager.h  disp2sigmanager.cpp  disp2sigmanager.h  mon2dispmanager.cpp  mon2dispmanager.h  sig2dispmanager.cpp  sig2dispmanager.h  targetdispmanager.cpp  targetdispmanager.h
PointManager/: detmanager.cpp  detmanager.h  point.cpp  point.h  sectordetmanager.cpp  sectordetmanager.h  sectortrackmanager.cpp  sectortrackmanager.h  trackmanager.cpp  trackmanager.h
PolarDisp/: PolarDispSet.h  datasyncmanager.cpp  datasyncmanager.h  disp2sigmanager.cpp  disp2sigmanager.h  mousepositioninfo.cpp  mousepositioninfo.h  mousepositioninfo.ui  pointinfow.cpp  pointinfow.h  pointinfow.ui  polaraxis.cpp  polaraxis.h  polargrid.cpp  polargrid.h  ppisscene.cpp  ppisscene.h  ppiview.cpp  ppiview.h  ppivisualsettings.cpp  ppivisualsettings.h  ppivisualsettings.ui  pviewtopleft.cpp  pviewtopleft.h  pviewtopleft.ui  scanlayer.cpp  scanlayer.h  sectorpolargrid.cpp  sectorpolargrid.h  sectorscene.cpp  sectorscene.h  sectorwidget.cpp  sectorwidget.h  tooltip.cpp  tooltip.h  zoomview.cpp  zoomview.h
UDP/: threadudpsocket.cpp  threadudpsocket.h  threadudpsocket_fixed.cpp
cusWidgets/: customcombobox.cpp  customcombobox.h  custommessagebox.cpp  custommessagebox.h  cuswindow.cpp  cuswindow.h  detachablewidget.cpp  detachablewidget.h
customWidgets/: detachablewidget.cpp  detachablewidget.h
htmls/: black.html  index.html  index3d.html  indexNoL.html  indexS.html
htmls/amap/: AMap3.js
mainPanel/: azelrangewidget.cpp  azelrangewidget.h  mainoverlayout.cpp  mainoverlayout.h  mainoverlayout.ui
mapDisp/: mapprox.cpp  mapprox.h
resources/style/: darkstyle.qss
scripts/: update_headers.py
tests/: TestFramework.h
